feat: add custom icon loading .. part 1

--- a/source/SingleScope.Plugin.Popup/Platforms/Android/Resources/layout/popup_loading.xml
+++ b/source/SingleScope.Plugin.Popup/Platforms/Android/Resources/layout/popup_loading.xml
@@ -20,6 +20,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             />
+
+        <ImageView
+            android:id="@+id/progress_indicator_gif"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone"
+            />
         
         <TextView
             android:id="@+id/progress_value"
