--- a/source/SingleScope.Example/MainPage.xaml
+++ b/source/SingleScope.Example/MainPage.xaml
@@ -7,6 +7,8 @@
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
+            <Image Source="loading_example.gif" />
+            
             <Image
                 Source="dotnet_bot.png"
                 HeightRequest="185"
