--- a/source/SingleScope.Example/MainPage.xaml
+++ b/source/SingleScope.Example/MainPage.xaml
@@ -7,6 +7,7 @@
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
+            <Image Source="dotnet_bot.png" />
             <Image Source="loading_example.gif" />
             
             <Image
