refactor: use WebView for gif image, it's eliminate the issue that Gif not playing in Release mode

--- a/source/SingleScope.Plugin.Popup/Loading/Views/LoadingPopup.xaml
+++ b/source/SingleScope.Plugin.Popup/Loading/Views/LoadingPopup.xaml
@@ -5,18 +5,30 @@
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     x:Class="SingleScope.Plugin.Popup.Loading.LoadingPopup"
     Color="Transparent">
-    <Border BackgroundColor="{Binding BackgroundColor, TargetNullValue={Static Colors.White}}" MinimumHeightRequest="240" MinimumWidthRequest="240" Padding="10"
+    <Border BackgroundColor="{Binding Param.BackgroundColor, TargetNullValue={Static Colors.White}}"
+            MinimumHeightRequest="240" 
+            MinimumWidthRequest="240" 
+            Padding="10"
             StrokeThickness="0">
         <Border.StrokeShape>
-            <RoundRectangle CornerRadius="{Binding CornerRadius, TargetNullValue=0}"/>
+            <RoundRectangle CornerRadius="{Binding Param.CornerRadius, TargetNullValue=0}"/>
         </Border.StrokeShape>
-        <VerticalStackLayout HorizontalOptions="Fill" Spacing="10" VerticalOptions="Center">
-            <ActivityIndicator HorizontalOptions="Center" IsRunning="True" IsVisible="{Binding GifImageBuffer, Converter={toolkit:IsNullConverter}}"/>
-            <Image Source="{Binding GifImageBuffer, Converter={toolkit:ByteArrayToImageSourceConverter}}" IsAnimationPlaying="True" 
-                   HeightRequest="{Binding GifImageHeight, TargetNullValue=-1}"
-                   WidthRequest="{Binding GifImageWidth, TargetNullValue=-1}"
-                   HorizontalOptions="Center" IsVisible="{Binding GifImageBuffer, Converter={toolkit:IsNotNullConverter}}"/>
-            <Label Text="{Binding Message}" HorizontalOptions="Center" IsVisible="{Binding Message, Converter={toolkit:IsNotNullConverter}}"/>
+        <VerticalStackLayout HorizontalOptions="Fill" 
+                             Spacing="10" 
+                             VerticalOptions="Center">
+            <ActivityIndicator HorizontalOptions="Center" 
+                               IsRunning="True" 
+                               IsVisible="{Binding Param.GifImageUri, Converter={toolkit:IsNullConverter}}"/>
+
+            <WebView Source="{Binding Param.GifImageUri}"
+                     HeightRequest="{Binding Param.GifImageHeight, TargetNullValue=-1}"
+                     WidthRequest="{Binding Param.GifImageWidth, TargetNullValue=-1}"
+                     HorizontalOptions="Center" 
+                     IsVisible="{Binding Param.GifImageUri, Converter={toolkit:IsNotNullConverter}}"/>
+            
+            <Label Text="{Binding Param.Message}" 
+                   HorizontalOptions="Center" 
+                   IsVisible="{Binding Param.Message, Converter={toolkit:IsNotNullConverter}}"/>
         </VerticalStackLayout>
     </Border>
 </toolkit:Popup>
