--- a/source/SingleScope.Maui/Controls/LoadingPopup.xaml
+++ b/source/SingleScope.Maui/Controls/LoadingPopup.xaml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<toolkit:Popup
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-    x:Class="SingleScope.Maui.Controls.LoadingPopup"
-    Color="Transparent">
-    <Border BackgroundColor="{Binding Param.BackgroundColor, TargetNullValue={Static Colors.White}}"
-            MinimumHeightRequest="{Binding Param.MinimumHeight}" 
-            MinimumWidthRequest="{Binding Param.MinimumWidth}" 
-            Padding="10"
+<toolkit:Popup x:Class="SingleScope.Maui.Controls.LoadingPopup"
+               xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+               xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+               Color="Transparent">
+    <Border Padding="{Binding Options.PopupPadding}"
+            BackgroundColor="{Binding Options.BackgroundColor, TargetNullValue={Static Colors.White}}"
+            MinimumHeightRequest="{Binding Options.MinimumHeight}"
+            MinimumWidthRequest="{Binding Options.MinimumWidth}"
             StrokeThickness="0">
         <Border.StrokeShape>
-            <RoundRectangle CornerRadius="{Binding Param.CornerRadius, TargetNullValue=0}"/>
+            <RoundRectangle CornerRadius="{Binding Options.CornerRadius, TargetNullValue=0}" />
         </Border.StrokeShape>
-        <VerticalStackLayout HorizontalOptions="Fill" 
-                             Spacing="10" 
+        <VerticalStackLayout HorizontalOptions="Fill"
+                             Spacing="10"
                              VerticalOptions="Center">
-            <ActivityIndicator HorizontalOptions="Center" 
-                               IsRunning="True" 
-                               IsVisible="{Binding Param.GifImageUri, Converter={toolkit:IsNullConverter}}"/>
+            <ActivityIndicator HorizontalOptions="Center"
+                               IsRunning="True"
+                               IsVisible="{Binding Options.GifImageUri, Converter={toolkit:IsNullConverter}}" />
 
-            <WebView Source="{Binding Param.GifImageUri}"
-                     HeightRequest="{Binding Param.GifImageHeight, TargetNullValue=-1}"
-                     WidthRequest="{Binding Param.GifImageWidth, TargetNullValue=-1}"
-                     HorizontalOptions="Center" 
-                     IsVisible="{Binding Param.GifImageUri, Converter={toolkit:IsNotNullConverter}}"/>
-            
-            <Label Text="{Binding Param.Message}" 
-                   HorizontalOptions="Center" 
-                   IsVisible="{Binding Param.Message, Converter={toolkit:IsNotNullConverter}}"/>
+            <WebView HeightRequest="{Binding Options.GifImageHeight, TargetNullValue=-1}"
+                     HorizontalOptions="Center"
+                     IsVisible="{Binding Options.GifImageUri, Converter={toolkit:IsNotNullConverter}}"
+                     Source="{Binding Options.GifImageUri}"
+                     WidthRequest="{Binding Options.GifImageWidth, TargetNullValue=-1}" />
+
+            <Label HorizontalOptions="Center"
+                   IsVisible="{Binding Options.Message, Converter={toolkit:IsNotNullConverter}}"
+                   Text="{Binding Options.Message}" />
         </VerticalStackLayout>
     </Border>
 </toolkit:Popup>
