--- a/source/SingleScope.Maui/Dialogs/Controls/LoadingPopup.xaml
+++ b/source/SingleScope.Maui/Dialogs/Controls/LoadingPopup.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<toolkit:Popup x:Class="SingleScope.Maui.Controls.LoadingPopup"
+<toolkit:Popup x:Class="SingleScope.Maui.Dialogs.Controls.LoadingPopup"
                xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
