--- a/sample/Sample/Views/TwoPageView.xaml
+++ b/sample/Sample/Views/TwoPageView.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SingleScope.Sample.TestPage2"
-             Title="TestPage2">
+             x:Class="Sample.Views.TwoPageView"
+             Title="TwoPageView">
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
