--- a/sample/Sample/AppShell.xaml
+++ b/sample/Sample/AppShell.xaml
@@ -3,12 +3,12 @@
     x:Class="Sample.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Sample"
+    xmlns:local="clr-namespace:Sample.Views"
     Title="Sample">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:OnePageView}"
+        Route="OnePageView" />
 
 </Shell>
