--- a/sample/Sample/Views/OnePageView.xaml
+++ b/sample/Sample/Views/OnePageView.xaml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Sample.Views.OnePageView"
-             Title="OnePageView">
+<ContentPage
+    x:Class="Sample.Views.OnePageView"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:vm="clr-namespace:Sample.ViewModels"
+    Title="OnePageView"
+    x:DataType="{x:Type vm:OneViewModel}">
     <VerticalStackLayout>
-        <Label 
+        <Label
+            HorizontalOptions="Center"
             Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            VerticalOptions="Center" />
+        <Button Command="{Binding OpenScopedLoadingCommand}" Text="Open Scoped Loading" />
+        <Button Command="{Binding OpenCancellableScopedLoadingCommand}" Text="Open Scoped Loading (Cancellable)" />
+        <Button Command="{Binding OpenProgressiveLoadingCommand}" Text="Open Progressive Loading" />
+        <Button Command="{Binding OpenCancellableProgressiveLoadingCommand}" Text="Open Progressive Loading (Cancellable)" />
     </VerticalStackLayout>
 </ContentPage>
